# personal-finance-app

./: README.md  pyproject.toml  requirements.txt  start.sh
application/: __init__.py
application/backend/: run.py
application/backend/src/: __init__.py  plaid_service.py  routes.py  server.py  utils.py
application/data/: balance.pkl  models.py  transactions.pkl
application/frontend/: run.py
application/frontend/app/: __init__.py  forms.py  routes.py
application/frontend/app/templates/: about.html  home.html  layout.html  login.html  plotly_dash.html  register.html
application/frontend/dash_app/: __init__.py  layout.py  munging.py
application/frontend/public/: index.html
application/frontend/src/: __init__.py  forms.py  routes.py
application/frontend/src/static/: main.css
application/frontend/src/templates/: about.html  account.html  create_post.html  home.html  layout.html  login.html  plotly_dash.html  post.html  posts.html  register.html  user_posts.html
instance/: site.db
